footer + header styling

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ h3 {
   font-size: 1.25rem;
 }
 
+a {
+  text-decoration: underline;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -23,6 +27,7 @@ h3 {
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
     --primary: 142.1 76.2% 36.3%;
+    --primary-darkened: 142.1, 76.2%, 32%;
     --primary-foreground: 355.7 100% 97.3%;
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
@@ -46,6 +51,7 @@ h3 {
     --popover: 0 0% 9%;
     --popover-foreground: 0 0% 95%;
     --primary: 142.1 70.6% 45.3%;
+    /* TODO: primary darkened */
     --primary-foreground: 144.9 80.4% 10%;
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
