--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,17 @@ h3 {
   font-size: 1.5rem;
 }
 
+h4 {
+  font-size: 1.25rem;
+}
+
 a {
   text-decoration: underline;
+}
+
+ul {
+  list-style-type: disc;
+  list-style-position: inside;
 }
 
 @layer base {
